--- a/r2/r2/templates/buttonnobody.html
+++ b/r2/r2/templates/buttonnobody.html
@@ -28,4 +28,8 @@
   ${button2(thing)}
 %elif thing.button == 3:
   ${button3(thing)}
+%elif thing.button == 4:
+  ${button4(thing)}
+%elif thing.button == 5:
+  ${button5(thing)}
 %endif
