--- a/r2/r2/templates/buttontypes.html
+++ b/r2/r2/templates/buttontypes.html
@@ -27,7 +27,7 @@
 <%namespace file="printable.html" import="arrow, score" />
 <%namespace file="utils.html" import="img_link" />
 
-<%def name="submiturl(url, title='')">${("http://%s/submit" % get_domain(True)) + query_string(dict(url=url, title=title))}</%def>
+<%def name="submiturl(url, title='')">${("http://%s/submit" % get_domain(cname = c.cname)) + query_string(dict(url=url, title=title))}</%def>
 
 <%def name="submitlink(url, title='', text='submit')">
   <a href='${submiturl(url, title)}' target='${thing.target}'>${text}</a>
@@ -49,7 +49,6 @@ ${class_def(1, width=choose_width(thing.link, thing.width))}
     </a>
   </div>
   %if thing.link:
-    <% thing.link.score = thing.link._ups - thing.link._downs %>
     %if thing.vote:
     ${arrow(thing.link, 1, thing.likes)}
     ${arrow(thing.link, 0, thing.likes == False)}
@@ -67,7 +66,6 @@ ${class_def(1, width=choose_width(thing.link, thing.width))}
 <%def name="button2(thing)">
   ${class_def(2)}
     %if thing.link:
-      <% thing.link.score = thing.link._ups - thing.link._downs %>
       %if thing.vote:
       ${arrow(thing.link, 1, thing.likes)}
       ${score(thing.link, thing.likes, inline=False, label = False)}
@@ -96,7 +94,6 @@ ${class_def(1, width=choose_width(thing.link, thing.width))}
 ${class_def(3)}
   <div class="left">
     %if thing.link:
-      <% thing.link.score = thing.link._ups - thing.link._downs %>
       %if thing.vote:
       ${arrow(thing.link, 1, thing.likes)}
       ${score(thing.link, thing.likes, inline=False, label = False)}
@@ -113,8 +110,139 @@ ${class_def(3)}
     %endif
   </div>
   <div class="right">
-    ${img_link('submit', '/static/blog_snoo.gif', '/submit' + query_string(dict(url=thing.url, title=thing.title)))}
+    ${img_link('submit', '/static/blog_snoo.gif', capture(submiturl, thing.url, thing.title))}
   </div>
   <div class="clear"></div>
 </div>
+</%def>
+
+<%def name="button4(thing)">
+  ${class_def(2)}
+    %if thing.link:
+      %if thing.vote:
+      ${arrow(thing.link, 1, thing.likes)}
+      ${score(thing.link, thing.likes, inline=False, label = False)}
+      ${arrow(thing.link, 0, thing.likes == False)}
+      %else:
+      &nbsp;<br />
+      ${thing.link.score}
+      &nbsp;<br />
+      %endif
+    %else:
+      <img src="http://www.reddit.com/static/blog_head.png" alt=""/>
+      ${submitlink(thing.url, thing.title, 'submit to')}
+    %endif
+  </div>
+</%def>
+
+<%def name="button5(thing)">
+  ${class_def(5, width=choose_width(thing.link, thing.width))}
+  ${img_link('submit', '/static/blog_snoo.gif', capture(submiturl, thing.url, thing.title), _class="left")}
+  <%
+     submitlink = capture(submiturl, thing.url, thing.title)
+     if thing.link:
+        fullname = thing.link._fullname
+        ups = thing.link.upvotes
+        downs = thing.link.downvotes
+        if hasattr(c.site, "domain"):
+            c.cname = True
+        link = "http://%s%s" % (get_domain(cname = True, subreddit = False),
+                                thing.link.make_permalink_slow())
+     else:
+        fullname = ""
+        ups = 0
+        downs = 0
+        link = submitlink
+     if c.user_is_loggedin:
+        dir = 1 if thing.likes else 0 if thing.likes is None else -1
+        ups   = ups - (1 if dir > 0 else 0)
+        downs = downs - (1 if dir < 0 else 0)
+     else:
+        dir = 0
+
+     other_votes = float(ups + downs)
+     ups   = [ups, ups, ups + 1]
+     downs = [downs + 1, downs, downs]
+     votes = [other_votes + 1, other_votes, other_votes + 1]
+     up_pct = [int( 100 * ups[i] / votes[i]) if votes[i] else "--" for i in range(len(votes))]
+     down_pct = [int( 100 * downs[i] / votes[i]) if votes[i] else "--" for i in range(len(votes))]
+                                    
+     def controversy_text(_up_pct):
+        if isinstance(_up_pct, str):
+           return ""
+        p = abs(50 - _up_pct)
+        msg = "<b class='controversy%d'>%s</b>"                                    
+        if p <= 5:
+           return msg % (3, _("quite controversial"))
+        elif p <= 15:
+           return msg % (2, _("controversial"))
+        elif p <= 25:
+           return msg % (1, _("uncontroversial"))
+        else:
+           return msg % (0, _("quite uncontroversial"))
+     controversy = map(controversy_text, up_pct)
+   %>
+  <script type="text/javascript">
+    function set_score(id, dir) {
+      for(var i = 0; i < 3; i++) {
+         var fn =  (i == dir + 1) ? show: hide;
+         fn("down" + i + "_" + id);
+         fn("up" + i + "_" + id);
+         fn("controversy" + i + "_" + id);
+      }
+    }
+  </script>
+  <div class="container">
+    <ul>
+      <li class="selected">
+        ${_("Vote on this article")}
+      </li>
+      <li>
+        <a href="${link}" target="_new">
+          %if thing.link:
+            ${_("Discuss at the %(name)s reddit") % dict(name = c.site.name)}
+          %else:
+            ${_("Submit to the %(name)s reddit") % dict(name = c.site.name)}
+          %endif
+        </a>
+      </li>
+    </ul>
+    <div class="votes ${'' if thing.link else 'disabled'}">
+      %for i in range(3):
+        <div class="right" id="controversy${i}_${fullname}"
+           ${"" if i == dir + 1 else "style='display:none'"}>
+          ${unsafe(controversy[i])}
+        </div>
+      %endfor
+      <a class="arrow up${'mod' if dir==1 else ''}" 
+         id="up_${fullname}"
+         %if c.user_is_loggedin and thing.link:
+            href="#" onclick="mod('${fullname}', 1); return false; "
+         %else:
+           href="${submitlink}" target="_new"
+         %endif
+      >
+        %for i in range(3):
+          <span id="up${i}_${fullname}"
+                ${"" if i == dir + 1 else "style='display:none'"}
+                ><b>${up_pct[i]}%</b>&#32;liked it (${ups[i]})</span>
+        %endfor
+      </a>
+      <a class="arrow down${'mod' if dir==-1 else ''}" id="down_${fullname}"
+         %if c.user_is_loggedin and thing.link:
+           href="#" onclick="mod('${fullname}', 0); return false;"
+         %else:
+           href="${submitlink}" target="_new"
+         %endif
+         >
+        %for i in range(3):
+          <span id="down${i}_${fullname}"
+                ${"" if i == dir + 1 else "style='display:none'"}
+                ><b>${down_pct[i]}%</b>&#32;disliked it (${downs[i]})</span>
+        %endfor
+      </a>
+    </div>
+    <div class="clearleft"><!--IEsux--></div>
+  </div>
+  </div>
 </%def>
