--- a/r2/r2/templates/server_status_page.html
+++ b/r2/r2/templates/server_status_page.html
@@ -20,63 +20,93 @@
 ## CondeNet, Inc. All Rights Reserved.
 ################################################################################
 
-<html>
-  <head>
-    <title>How are those pesky PIDs doing?</title>
-    <link rel='stylesheet' href="http://reddit.com/static/styles.css" type="text/css" />
-  </head>
-  <body>
-    <table cellpadding="5" cellspacing="2">
-      <tr> 
-        <th>host</th>
-        <th>name</th>
-        <th>pid</th>
-        <th>now</th>
-        <th>5 sec</th>
-        <th>1 min</th>
-        <th>5 min</th>
-	<th><span style="color:green">5 sec</span> / <span style="color:red">1 min</span></th>
-      </tr>
-      <tr> 
+<%!
+        from r2.lib.utils import lstrips
+%>
+
+<%
+     cpu_col = 75.
+     mem_col = 40.
+ %>
+ 
+<div class="server-status">
+  <h3>Rendered by PID ${g.reddit_pid} on ${g.reddit_host}</h3>
+  <table>
+    <tr> 
+      <th>process</th>
+      <th>memory</th>
+      <th>
+        <span style="color:green">1 min</span> / 
+        <span style="color:red">5 min</span>
+      </th>
+      <th></th>
+    </tr>
+    <tr> 
       <td></td>
+      <td><div class="bar" style="width:${mem_col}px;"></div></td>
+      <td><div class="bar" style="width:${cpu_col}px;"></div></td>
       <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td><div style="height:5px; width:100px;background-color:blue;"></div></td>
-      </tr> 
-      
-      %for s in thing.services:
-      <%
+    </tr> 
+    
+    %for s in thing.services:
+    <%
+       host = s._host
        services = s.get_cache() or []
        services.sort(lambda x, y: 1 if x['name'] > y['name'] else -1)
-      %>
-      %for service in services:
-      <tr>
-	<td>
-	  ${service['host']}
-	</td>
-	<td>
-	  ${service['name']}
-	</td>
-	<td>
-	  ${service['pid']}
-	</td>
-	%for x in (0, 5, 60, 300):
-	<td>
-	  ${"%5.2f%%" % service['cpu_' + str(x)]}
-	</td>
-	%endfor
-	<td>
-	  <div style="height:5px; width:${int(service['cpu_5'])}px;background-color:green;"></div>
-	  <div style="height:5px; width:${int(service['cpu_60'])}px;background-color:red;"></div>
-	</td>
-      </tr>
-      %endfor
-      %endfor
-    </table>
-  </body>
-</html>
+       load = s.load
+       load_level = min(max(int(load+0.5), 0),5)
+    %>
+    <tr class="load${load_level}">
+      <td>
+        <b>
+          ${host} load: ${load}
+        </b>
+      </td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+    %for service in services:
+    <%
+       pegged = all([service['cpu_' + str(x)] > 99 for x in (0, 5, 60, 300)]) or \
+             (service.get('mem', 0)  >= 20)
+       pegged = "pegged" if pegged else ""
 
+       mem_wid = int(mem_col/25*min(25, int(service.get('mem',0))))
+       cpu_60_wid  = int(cpu_col/100*min(100,int(service['cpu_60'])))
+       cpu_300_wid = int(cpu_col/100*min(100,int(service['cpu_300'])))
+     %>
+  
+    <tr class="load${load_level} ${pegged}">
+      <td>
+        %if g.reddit_host == host and g.reddit_pid == service['pid']:
+          <b style="color:orangered; font-size:larger">&raquo;</b>
+        %else:
+          &nbsp;
+        %endif
+        ${lstrips(service['name'], "/service/")}
+      </td>
+      <td>
+        <div class="membar" style="width:${mem_wid}px;"></div>
+      </td>
+      <td>
+        <div class="cpu50" style="width:${cpu_60_wid}px;"></div>
+        <div class="cpu300" style="width:${cpu_300_wid}px;"></div>
+      </td>
+      <td>
+        <%
+           age = service.get('age', 0)
+           if isinstance(age, str):
+              age = 0
+           if age > 60:
+              age = "%d hr" % int(age/60)
+           else:
+              age = "%d min" % age
+         %>
+        ${age}
+      </td>
+    </tr>
+        %endfor
+    %endfor
+  </table>
+</div>
