apparently there are people who still use the compressed view

--- a/r2/r2/templates/link.html
+++ b/r2/r2/templates/link.html
@@ -72,7 +72,7 @@
       ${thing.title} 
     </%call>
     &#32;
-    ${self.domain()}
+    ${unsafe(self.domain())}
   </p>
   <p class="tagline">
     ${self.tagline()}
