--- a/r2/r2/templates/link.html
+++ b/r2/r2/templates/link.html
@@ -72,7 +72,7 @@
       ${thing.title} 
     </%call>
     &#32;
-    ${unsafe(self.domain())}
+    ${self.domain()}
   </p>
   <p class="tagline">
     ${self.tagline()}
@@ -138,7 +138,7 @@
 
 <%def name="domain()">
   <span class="domain">
-    (${thing.domain})
+    (<a href="/domain/${thing.domain}">${thing.domain}</a>)
   </span> 
 </%def>
 
