--- a/r2/r2/templates/subredditstylesheet.html
+++ b/r2/r2/templates/subredditstylesheet.html
@@ -103,7 +103,7 @@
     <h2><a name="images">${_("images")}</a></h2>
 
     <form class="pretty-form image-upload" enctype="multipart/form-data"
-          target="upload-iframe" id="upload-image"
+          target="upload-iframe" id="image-upload"
           action="/api/upload_sr_img" method="post"
           onsubmit="return check_name(this)">
       <input type="hidden" name="uh" value="${c.modhash}" />
